enable JDK 11 builds (#2525)
fixes #2522