@@ -136,12 +136,11 @@
                     <path>/${project.build.finalName}</path>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${surefireArgLine}</argLine>
+                    <argLine>@{surefireArgLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -151,7 +150,7 @@
         <profile>
             <id>java9plus</id>
             <activation>
-                <jdk>[9,11]</jdk>
+                <jdk>[9,18]</jdk>
             </activation>
             <build>
                 <plugins>
@@ -160,6 +159,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <argLine>
+                                @{surefireArgLine}
+                                --illegal-access=permit
                                 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                                 --add-exports java.base/sun.nio.ch=ALL-UNNAMED
